# AI-Virtual-Try-On

./: .gitignore  README.md  render.yaml
backend/: .env.example  README.md  pyproject.toml  render.yaml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/v1/: catalog.py  health.py  tryon.py
backend/app/fit_prediction/: __init__.py  gemini.py  predictor.py
backend/app/providers/: base.py  huggingface.py  nanobanana.py  registry.py  replicate.py  stub.py
backend/app/schemas/: catalog.py  tryon.py
backend/data/: catalog.json
backend/scripts/: generate_placeholders.py
backend/tests/: test_fit_prediction.py  test_health.py  test_tryon_endpoint.py
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json  vercel.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: catalog.ts  client.ts  health.ts  tryon.ts
frontend/src/components/layout/: Footer.tsx  Navbar.tsx
frontend/src/components/wizard/: GarmentStep.tsx  MeasurementForm.tsx  PhotoStep.tsx  PhotoUpload.tsx  PoseCanvas.tsx  ResultStep.tsx  WizardProgress.tsx
frontend/src/hooks/: usePoseLandmarker.ts
frontend/src/lib/: gallery.ts
frontend/src/pages/: AboutPage.tsx  GalleryPage.tsx  LandingPage.tsx  TryOnPage.tsx
frontend/src/types/: tryon.ts
